--- a/src/bank/components/dashboard/Dasboard.css
+++ b/src/bank/components/dashboard/Dasboard.css
@@ -9,23 +9,24 @@
     gap: 2em;
 }
 
-.menu-container p{
+.menu-container a{
     display: flex;
     justify-content: start;
     align-items: center;
     gap: 10px;
     padding: 15px 15px;
     color: white;
+    transition: all 0.25s ease;
+    cursor: pointer;
+    text-decoration: none;
     border-top-left-radius: 5px;
     border-bottom-left-radius: 5px;
-    transition: all 0.30s ease;
-    cursor: pointer;
 }
 
-.menu-container p:nth-child(1){
+.menu-container a.active{
     background-color: #8491ff;
 }
 
-.menu-container p:hover{
+.menu-container a:hover{
     background-color: #8491ff;
 }
