--- a/src/bank/layout/Layout.css
+++ b/src/bank/layout/Layout.css
@@ -1,10 +1,17 @@
 
 .layout-container{
     display: flex;
+    flex-direction: column;
     height: 100vh;
+}
+
+.accounts-container{
+    display: flex;
+    height: 100%;
 }
 
 .layout-container .accounts-content{
     width: calc(100% - 15em);
     background-color: aliceblue;
+    padding: 5em 6em;
 }
