feat: added menu responsive and test state

--- a/src/bank/components/dashboard/Dasboard.css
+++ b/src/bank/components/dashboard/Dasboard.css
@@ -7,6 +7,7 @@
     padding-left: 25px;
     padding-top: 25px;
     gap: 2em;
+    transition: all 0.30s ease;
 }
 
 .menu-container a{
@@ -29,4 +30,20 @@
 
 .menu-container a:hover{
     background-color: #8491ff;
+}
+
+@media (max-width: 590px){
+
+    .menu-container{
+        position: absolute;
+        left: -10000px;
+        height: 100%;
+    }
+
+    .menu-container.active{
+        position: absolute;
+        left: 0px;
+        height: 100%;
+    }
+
 }
