--- a/src/bank/components/dashboard/Dasboard.css
+++ b/src/bank/components/dashboard/Dasboard.css
@@ -1,4 +1,6 @@
 .menu-container{
+    position: fixed;
+    height: 100%;
     display: flex;
     flex-direction: column;
     background-color: #192850;
@@ -26,6 +28,10 @@
 
 .menu-container a.active{
     background-color: #8491ff;
+}
+
+.menu-container {
+    padding-top: 7.5em;
 }
 
 .menu-container a:hover{
