--- a/src/bank/components/navbar/NavBar.css
+++ b/src/bank/components/navbar/NavBar.css
@@ -1,12 +1,15 @@
 .nav-bar{
+    position: fixed;
+    top: 0;
     display: flex;
     justify-content: space-between;
-    height: 90px;
+    height: 80px;
     width: 100%;
     background-color: #4859a5;
     align-items: center;
     color: white;
     padding: 0 20px;
+    z-index: 10000;
 }
 
 .nav-bar div:nth-child(1){
