--- a/src/bank/layout/Layout.css
+++ b/src/bank/layout/Layout.css
@@ -15,7 +15,7 @@
     width: calc(100% - 15em);
     background-color: aliceblue;
     padding: 7em 6em 5em 6em;
-    height: 200vh;
+    height: auto;
 }
 
 .close-menu{
@@ -25,7 +25,7 @@
 @media (max-width: 810px){
 
     .layout-container .accounts-content{
-        padding: 5em 5%;
+        padding: 7em 5% 5em 5%;
     }
 
 }
@@ -39,7 +39,7 @@
     }
 
     .layout-container .accounts-content{
-        padding: 3em 5%;
+        padding: 7em 5% 3em 5%;
     }
 
     .close-menu{
